--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,13 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
+    "langchain>=1.2.6",
+    "langchain-ollama>=1.0.1",
+    "newspaper3k>=0.2.8",
+    "newspaper4k>=0.9.3",
+    "playwright>=1.57.0",
     "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
+    "trafilatura>=2.0.0",
 ]
