--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
+    "django-scheduler>=0.10.1",
     "langchain>=1.2.6",
     "langchain-ollama>=1.0.1",
     "newspaper3k>=0.2.8",
