--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,13 @@ dependencies = [
     "langchain-ollama>=1.0.1",
     "newspaper3k>=0.2.8",
     "newspaper4k>=0.9.3",
+    "pandas>=2.1.0",
     "playwright>=1.57.0",
+    "plotly>=5.18.0",
     "psycopg2-binary>=2.9.11",
     "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
+    "streamlit>=1.31.0",
     "trafilatura>=2.0.0",
 ]
