--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,5 +17,8 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
     "streamlit>=1.31.0",
+    "tokenizers>=0.20.3",
+    "torch>=2.0.0",
     "trafilatura>=2.0.0",
+    "transformers>=4.57.6",
 ]
