Added cli, improved modularity

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
-    "django-scheduler>=0.10.1",
     "langchain>=1.2.6",
     "langchain-ollama>=1.0.1",
-    "newspaper3k>=0.2.8",
-    "newspaper4k>=0.9.3",
     "pandas>=2.1.0",
     "playwright>=1.57.0",
     "plotly>=5.18.0",
@@ -16,6 +13,8 @@ dependencies = [
     "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
+    "schedule>=1.2.2",
+    "sentencepiece>=0.2.1",
     "streamlit>=1.31.0",
     "tokenizers>=0.20.3",
     "torch>=2.0.0",
