--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.11"
 dependencies = [
     "langchain>=1.2.6",
     "langchain-ollama>=1.0.1",
+    "matplotlib>=3.7.0",
     "pandas>=2.1.0",
     "playwright>=1.57.0",
     "plotly>=5.18.0",
@@ -14,6 +15,8 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
     "schedule>=1.2.2",
+    "scikit-learn>=1.3.0",
+    "seaborn>=0.12.0",
     "sentencepiece>=0.2.1",
     "streamlit>=1.31.0",
     "tokenizers>=0.20.3",
