--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
+    "hf-xet>=1.2.0",
     "langchain>=1.2.6",
     "langchain-ollama>=1.0.1",
     "matplotlib>=3.7.0",
