--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,15 @@ dependencies = [
     "trafilatura>=2.0.0",
     "transformers>=4.57.6",
 ]
+
+[project.scripts]
+news-tracker = "src.cli:app"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
+
+# pip install -e .
